Ajustando pastas componentes tirando funções "data" do antigo projeto

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,7 +4,7 @@
 		<div id="navbar-flat-search" class="animate fadeInDown">
 		    <form action="todos-os-pratos.php" name="frmsearch" method="GET" id="form-search">
 			    <input type="text" name="search" placeholder="Pesquise" required>
-		        <div id="navbar-flat-search-button" data-f4f-trigger-search>
+		        <div id="navbar-flat-search-button">
 			        <img src="assets/images/icons/search.svg" alt="Pesquise">
 			    </div>
 			    <input type="submit" class="display-none">
