Dark mode implementado

--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -3,6 +3,7 @@ $sunsetorange: #E85858;
 $white: #FFFFFF;
 $black: #000000;
 $darkgrey: #282828;
+$darkgreymedium: #303030;
 $grey: #7F7F7F;
 $lightgrey: #FCFCFC;
 $gold: #EDBF85;
