--- a/components/navbar.html
+++ b/components/navbar.html
@@ -68,6 +68,10 @@
 	<div class="sidebar-separator"></div>
 	<ul class="sidebar-right-list padding-right-30px">
 		<li><a href="configuracoes.php">Configurações</a></li>
+		<li id="flex">
+			<input type="checkbox" id="themeSwitch" class="switch-styled" onchange="checkTheme(this)">
+			<label>Dark Mode</label>
+		</li>
 		<li><a href="termos-uso.php">Termos de Uso</a></li>
 		<li><a href="politicas-privacidade.php">Políticas de Privacidade</a></li>
 		<li><a href="">Logout</a></li>
