--- a/assets/scss/bases-dark.scss
+++ b/assets/scss/bases-dark.scss
@@ -11,14 +11,6 @@
 	border-radius: 50px;
 	background-color: $olivine;
 }
-.main{
-	/*Container-mãe do block do site*/
-	@include bloco(100%, 1200px, auto);
-	@include display(flex, column);
-	background-color: $lightgrey;
-    margin: 124px auto 0px auto;
-	z-index: 1;
-}
 
 .jq-toast-single {
 	/*Estilo do toast*/
@@ -29,46 +21,6 @@
     padding: 30px 10px;
     width: 95%;
     box-sizing: border-box;
-}
-/* TÍTULO DA PÁGINA */
-#page-title{
-	/*Título da página*/
-	display: block;
-	font-size: 18px;
-	letter-spacing: -0.2px;
-	font-family: "Roboto Bold";
-	color: #000;
-	padding: 30px;
-	text-align: center;
-    margin: 0 auto;
-	padding-bottom: 0px;
-	animation: fadeIn 1.5s linear;
-	&:after{
-		/*Barra separada do título da página*/
-		content: "";
-		display: block;
-		width: 30px;
-		height: 3px;
-		margin: auto;
-		border-radius: 30px;
-		background-color: #000;
-		margin-top: 8px;
-		animation: fadeIn 1s linear;
-	}
-}
-#page-subtitle{
-    width: 90%;
-    max-width: 460px;
-    height: auto;
-    text-align: center;
-    color: #7F7F7F;
-    font-family: "Roboto Regular";
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    margin: 0 auto;
-    margin-top: 5px;
-    animation: fadeIn 1s linear;
 }
 //=================================================
 /* GRID GENÉRICO */
@@ -163,7 +115,8 @@
     @include bloco($maxwidth: 100%, $height: auto);
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: $shadow;
+	box-shadow: $shadow;
+	background-color: $darkgreymedium;
     transition: 200ms ease-in-out;
     cursor: pointer;
     position: relative;
@@ -382,14 +335,14 @@ tr td:nth-child(4){
 }
 .form-title{
     font-size: 18px;
-    color: $black;
+    color: $white;
     font-family: "Roboto Regular";
     padding-bottom: 15px;
     text-align: left;
 }
 .form-subtitle{
     font-size: 16px;
-    color: $darkgrey;
+    color: $grey;
     font-family: "Roboto Light";
     line-height: 21px;
     padding-bottom: 15px;
@@ -403,19 +356,19 @@ tr td:nth-child(4){
 	.label-generic{
 	  	font-size: 18px;
 	  	font-family: "Roboto Bold";
-	  	color: #000;
+	  	color: $white;
 	  	display: block;
 	}
 	.label-rdo{
 	  	font-size: 16px;
 	  	font-family: "Roboto Bold";
-	  	color: #000;
+	  	color: $black;
 	}
 	.input-generic{
 	  	width: 100%;
 	  	border-radius: 5px;
 	  	display: block;
-	  	background-color: $mediumgrey;
+	  	background-color: $darkgreymedium;
 	  	border: none;
 	  	outline: none;
 	  	height: 40px;
@@ -440,7 +393,7 @@ tr td:nth-child(4){
 		width: 100%;
 	  	resize: none;
 	  	height: 150px;
-	  	background-color: #E8E8E8;
+	  	background-color: $darkgreymedium;
 	  	border-radius: 5px;
 	  	border: none;
 	  	outline: none;
@@ -455,7 +408,7 @@ tr td:nth-child(4){
 		width: 100%;
 		height: auto;
 		min-height: 230px;
-		background-color: #E8E8E8;
+		background-color: $darkgreymedium;
 	  	border-radius: 5px;
 	  	border: none;
 	  	outline: none;
@@ -469,7 +422,7 @@ tr td:nth-child(4){
     .label-fix{
 	  	font-size: 18px;
 	  	font-family: "Roboto Bold";
-	  	color: #000;
+	  	color: $white;
 	  	display: block;
 	}
     .label-fix-result{
@@ -482,7 +435,7 @@ tr td:nth-child(4){
     .label-rdo-generic{
     	font-size: 16px;
 	  	font-family: "Roboto Medium";
-	  	color: #000;
+	  	color: $white;
 	  	display: inline-block;
     }
 }
@@ -678,7 +631,6 @@ input[type="checkbox"].switch-styled:checked:after{
 .generic-block{
 	@include bloco(100%, false, auto, false);
     position: relative;
-    background-color: $lightgrey;
     overflow: hidden;
 }
 
