--- a/components/navbar.html
+++ b/components/navbar.html
@@ -69,8 +69,7 @@
 	<ul class="sidebar-right-list padding-right-30px">
 		<li><a href="configuracoes.php">Configurações</a></li>
 		<li id="flex">
-			<input type="checkbox" id="themeSwitch" class="switch-styled" onchange="checkTheme(this)">
-			<label>Dark Mode</label>
+			<label for="themeSwitch"><input type="checkbox" id="themeSwitch" class="switch-styled" name="theme" value="1">Dark Mode</label>
 		</li>
 		<li><a href="termos-uso.php">Termos de Uso</a></li>
 		<li><a href="politicas-privacidade.php">Políticas de Privacidade</a></li>
@@ -81,3 +80,30 @@
 		<img src="assets/images/simbols/close.svg" alt="Fechar Menu">
 	</div>
 </aside>
+<script>
+	$(function() {
+		var data = localStorage.getItem("theme");
+		if (data !== null) {
+			var check = $("input[name='theme']").attr("checked", "checked");
+			document.getElementById("themeStyle").href="assets/css/style-dark.css";
+			document.getElementById("themeBases").href="assets/css/bases-dark.css";
+			document.getElementById("themeNavbar").href="assets/css/navbar-dark.css";
+			document.getElementById("themeFooter").href="assets/css/footer-dark.css";
+		}
+	});
+	$("input[name='theme']").click(function() {
+		if ($(this).is(":checked")) {
+			localStorage.setItem("theme", $(this).val());
+			document.getElementById("themeStyle").href="assets/css/style-dark.css";
+			document.getElementById("themeBases").href="assets/css/bases-dark.css";
+			document.getElementById("themeNavbar").href="assets/css/navbar-dark.css";
+			document.getElementById("themeFooter").href="assets/css/footer-dark.css";
+		} else {
+			localStorage.removeItem("theme");
+			document.getElementById("themeStyle").href="assets/css/style-light.css";
+			document.getElementById("themeBases").href="assets/css/bases-light.css";
+			document.getElementById("themeNavbar").href="assets/css/navbar-light.css";
+			document.getElementById("themeFooter").href="assets/css/footer-light.css";
+		}
+	});
+</script>
