Otimizações de interface

--- a/assets/scss/cms/stylesheet-cms.scss
+++ b/assets/scss/cms/stylesheet-cms.scss
@@ -192,6 +192,7 @@ body {
         display: block;
         overflow: hidden;
         white-space: nowrap;
+        cursor: pointer;
     }
     #email {
         font-size: 16px;
