--- a/assets/scss/cms/stylesheet-cms-dark.scss
+++ b/assets/scss/cms/stylesheet-cms-dark.scss
@@ -193,6 +193,7 @@ body {
         display: block;
         overflow: hidden;
         white-space: nowrap;
+        cursor: pointer;
     }
     #email {
         font-size: 16px;
@@ -397,11 +398,11 @@ img.btn-logout:hover {
     margin-bottom: 20px;
 }
 .cms-table>tbody>tr:first-child {
-   background: #f2f2f2;
+   background: $darkgrey;
 }
 .cms-table-title{
     font-size: 18px;
-    color: $black;
+    color: $white;
     font-family: 'Roboto Bold';
     padding: 20px;
     display: block;
@@ -478,9 +479,9 @@ img.btn-logout:hover {
     .linha {
         @include display(flex, row, space-between, center);
         &:first-child {
-            background-color: $mediumgrey;
+            background-color: $darkgrey;
             .coluna {
-                @include texto(18px, $black, 'Roboto Bold', 60px);
+                @include texto(18px, $white, 'Roboto Bold', 60px);
                 padding-left: 20px;
                 text-transform: uppercase;
                 height: 60px;
@@ -736,7 +737,8 @@ img.btn-logout:hover {
     transform: rotate(180deg);
 }
 #page-actions {
-    @include bloco($width: 100%, $height: 50px); @include display(flex, row, space-between, center);
+    @include bloco($width: 100%, $height: 50px);
+    @include display(flex, row, space-between, center);
     padding: 0 20px;
     box-sizing: border-box;
     margin: 15px 0px;
@@ -749,7 +751,7 @@ img.btn-logout:hover {
             margin-right: 10px;
         }
         >span {
-            @include texto(16px, $black, 'Roboto Bold');
+            @include texto(16px, $white, 'Roboto Bold');
         }
     }
 }
@@ -768,7 +770,7 @@ img.btn-logout:hover {
 }
 #form-right-side {
     @include bloco(100%, 450px);
-    background-color: $lightgrey;
+    background-color: $darkgrey;
     @include display(flex, column, space-between, null);
     box-sizing: border-box;
     div:last-of-type {
@@ -840,6 +842,7 @@ img.btn-logout:hover {
         font-family: "Roboto Regular";
         font-size: 18px;
         margin: 0 20px;
+        color: $grey;
     }
     .select-block {
         display: flex;
@@ -849,6 +852,7 @@ img.btn-logout:hover {
             display: block;
             font-family: "Roboto Medium";
             font-size: 15px;
+            color: $grey;
         }
     }
 }
