--- a/assets/scss/style-dark.scss
+++ b/assets/scss/style-dark.scss
@@ -219,6 +219,9 @@ a{
 		}
 	}
 }
+.cart-descript{
+    display: block; font-size: 16px; font-family: 'Roboto Medium'; color: $white; text-align: center;
+}
 #shopping-cart-select-block{
     width: 100%;
     height: auto;
@@ -347,6 +350,10 @@ a{
 	#shopping-cart-confirm-column-one{
 	    width: 100%;
 	    height: auto;
+        color: $white;
+        >p{
+            color: $grey;
+        }
 	}
 	#shopping-cart-confirm-column-two{
 	    width: 100%;
@@ -355,6 +362,10 @@ a{
 	    flex-direction: column;
 	    justify-content: flex-end;
 	    align-items: flex-end;
+        color: $white;
+        >p{
+            color: $grey;
+        }
 	}
 }
 /* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
@@ -783,11 +794,11 @@ a{
 	z-index: 1;
 	.title-login{
 		@include texto(58px, $white, 'Roboto Bold', 72px, left);
-	    @include position(absolute, 15px, false, false, 15px);
+	    @include position(absolute, 40px, false, false, 40px);
 	}
 	.subtitle-login{
 		@include texto(21px, $darkgrey, 'Roboto Medium');
-	    @include position(absolute, 170px, false, false, 15px);
+	    @include position(absolute, 190px, false, false, 40px);
 	}
 }
 .login-form-separator{
@@ -1141,7 +1152,7 @@ a{
 	    }
 
         >a {
-            @include texto(null, #F2F2F2, "Roboto Bold Italic");
+            @include texto(null, $white, "Roboto Bold Italic");
             display: initial;
             &:after {
                 content: ">";
@@ -1167,7 +1178,7 @@ a{
     &.product-view {
         padding: 20px 20px 0 20px;
         >span>a {
-            color: $black;
+            color: $grey;
         }
     }
 }
@@ -1452,8 +1463,8 @@ a{
 	#product-view-image-container{
 		@include bloco(100%, 600px, auto);
 	    box-sizing: border-box;
-	    border: 30px solid $lightgrey;
-	    background-color: $lightgrey;
+	    border: 30px solid transparent;
+	    background-color: $darkgrey;
 		#product-view-image{
 			@include img-fit(100%, 100%);
 		    border-top-left-radius: 10px;
@@ -1482,25 +1493,25 @@ a{
 #product-view-info-container{
 	@include bloco(100%, 600px, auto);
     box-sizing: border-box;
-    background-color: #FCFCFC;
+    background-color: transparent;
 	#product-view-dish-name{
-		@include texto(28px, $black, 'Roboto Bold');
+		@include texto(28px, $white, 'Roboto Bold');
 	}
 	#product-view-dish-code{
 		@include texto(14px, $grey, 'Roboto Regular');
 	}
 }
 #product-view-price{
-	@include texto(28px, $black, 'Roboto Bold');
+	@include texto(28px, $white, 'Roboto Bold');
 }
 #product-view-price-descrip{
 	@include texto(14px, $grey);
 }
 #product-view-price-full{
-	@include texto(32px, null, 'Roboto Bold');
+	@include texto(32px, $white, 'Roboto Bold');
 	>span{
 		font-size: 21px;
-		color: $darkgrey;
+		color: $grey;
 		font-family: 'Roboto Regular';
 		display: inline-block;
 	}
@@ -1535,13 +1546,14 @@ a{
 #product-view-info-block{
 	@include bloco($width: 100%, $height: auto);
     @include display(flex, null, flex-start, flex-start);
-    background: $lightgrey;
+    background: $darkgrey;
 	.product-view-info-column{
 	    width: 33.33%;
 	    height: auto;
 		.product-view-info-column-title{
 		    font-family: 'Roboto Medium';
 		    font-size: 21px;
+            color: $white;
 		}
 		.product-view-info-column-list{
 		    list-style-type: none;
@@ -1549,12 +1561,14 @@ a{
 			    padding-bottom: 5px;
 			    font-family: "Roboto Light";
 			    font-size: 16px;
+                color: $grey;
 			}
 		}
 		.weight{
 		    font-family: 'Roboto Regular';
 		    font-size: 16px;
 		    display: block;
+            color: $grey;
 		}
 	}
 }
@@ -1562,15 +1576,15 @@ a{
 #product-view-comments-block{
     width: 100%;
     height: auto;
-    background: #FCFCFC;
+    background: $darkgrey;
     box-sizing: border-box;
-    border: 30px solid #FCFCFC;
+    border: 30px solid transparent;
 	#product-view-comments-title{
-		@include texto(21px, $black, 'Roboto Bold');
+		@include texto(21px, $white, 'Roboto Bold');
 	}
 	.comment-row{
 	    width: 100%;
-	    background-color: #FFF;
+	    background-color: $darkgreymedium;
 	    border-radius: 5px;
 	    height: auto;
 	    position: relative;
@@ -1591,10 +1605,10 @@ a{
 		.comment-row-info{
 		    width: 75%; height: auto;
 		    >h2{
-				@include texto(21px, $black, 'Roboto Regular');
+				@include texto(21px, $white, 'Roboto Regular');
 		    }
 		    >p{
-				@include texto(16px, $darkgrey, 'Roboto Light');
+				@include texto(16px, $grey, 'Roboto Light');
 		    }
 		    >span{
 				@include texto(12px, #8F8F8F, 'Roboto Italic');
@@ -1606,7 +1620,7 @@ a{
 .filter-menu{
     width: 100%;
     height: auto;
-    background-color: #E8E8E8;
+    background-color: $darkgrey;
     display: flex;
     flex-direction: row;
 	.filter-menu-column{
@@ -1619,7 +1633,7 @@ a{
 		.dishes-filter-label{
 		    font-family: 'Roboto Medium';
 		    font-size: 18px;
-		    color: #000;
+		    color: $white;
 		    display: inline-block;
 		}
 		.price-initial, .price-final{
@@ -1633,6 +1647,7 @@ a{
 		    border: none;
 		    outline: none;
 		    font-family: "Roboto Regular";
+            background-color: $darkgreymedium;
 		    width: 60%;
 		    display: block;
 		    text-indent: 12px;
@@ -1644,6 +1659,7 @@ a{
 		    border: none;
 		    outline: none;
 		    font-family: "Roboto Regular";
+            background-color: $darkgreymedium;
 		    display: block;
 		    text-indent: 12px;
 		    border-radius: 5px;
@@ -1654,7 +1670,6 @@ a{
     .filter-menu{
         width: 100%;
         height: auto;
-        background-color: #E8E8E8;
         display: block;
     }
     .dishes-filter-select{
@@ -1665,7 +1680,6 @@ a{
     .filter-menu{
         width: 100%;
         height: auto;
-        background-color: #E8E8E8;
         display: block;
     }
     .dishes-filter-select{
@@ -1699,7 +1713,7 @@ a{
 }
 #healthy-tricks-title{
     font-size: 21px;
-    color: #000;
+    color: $white;
     text-align: center;
     font-family: "Roboto Bold";
     padding-top: 30px;
@@ -1713,7 +1727,7 @@ a{
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
-    border: 30px solid #FCFCFC;
+    border: 30px solid transparent;
     justify-content: center;
 }
 .healthy-tricks-intro.image{
@@ -1740,14 +1754,14 @@ a{
 .healthy-tricks-intro.details>h3{
     font-family: 'Roboto Bold';
     font-size: 28px;
-    color: #000;
+    color: $white;
 }
 .healthy-tricks-intro.details>h3::after{
     content: "";
     display: block;
     width: 80px;
     height: 5px;
-    background: #9CC293;
+    background: $white;
     border-radius: 50px;
     margin: 20px 0px 20px 0px;
 }
@@ -1755,7 +1769,7 @@ a{
     font-family: "Roboto Regular";
     font-size: 18px;
     line-height: 26px;
-    color: #282828;
+    color: $lightgrey;
     width: 85%;
     margin: 0;
     text-align: left;
