--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -4,6 +4,7 @@ $white: #FFFFFF;
 $black: #000000;
 $darkgrey: #282828;
 $darkgreymedium: #303030;
+$darkgreyinput: #232323;
 $grey: #7F7F7F;
 $lightgrey: #FCFCFC;
 $gold: #EDBF85;
