--- a/components/navbar.html
+++ b/components/navbar.html
@@ -69,7 +69,7 @@
 	<ul class="sidebar-right-list padding-right-30px">
 		<li><a href="configuracoes.php">Configurações</a></li>
 		<li id="flex">
-			<label for="themeSwitch"><input type="checkbox" id="themeSwitch" class="switch-styled" name="theme" value="1">Dark Mode</label>
+			<label for="themeSwitch"><input type="checkbox" id="themeSwitch" class="switch-styled margin-right-10px" name="theme" value="1">Dark Mode</label>
 		</li>
 		<li><a href="termos-uso.php">Termos de Uso</a></li>
 		<li><a href="politicas-privacidade.php">Políticas de Privacidade</a></li>
