--- a/assets/scss/navbar-dark.scss
+++ b/assets/scss/navbar-dark.scss
@@ -146,8 +146,11 @@
 	top: 0;
 	left: 0;
 	bottom: 0;
-	overflow-y: scroll;
+	overflow: scroll;
 	z-index: 99999;
+}
+#sidebar-left::-webkit-scrollbar {
+    display: none;
 }
 #sidebar-left-close{
 	/*Botão para fechar o menu lateral*/
@@ -226,6 +229,9 @@
 	right: 0;
 	bottom: 0;
 	z-index: 99999;
+}
+#sidebar-right::-webkit-scrollbar {
+    display: none;
 }
 #sidebar-right-close{
 	/*Botão para fechar o menu lateral*/
