Boa parte do fit session concluido

--- a/assets/scss/style-dark.scss
+++ b/assets/scss/style-dark.scss
@@ -1432,30 +1432,30 @@ a{
         }
     }
 }
-
-//Por que e vantagens da comida fitness
-.fit-title{
-	@include texto(21px, $white, 'Roboto Bold');
-}
-.fit-text{
-	@include texto(16px, $grey, 'Roboto Regular', 24px);
-    width: 85%;
-    >a{
-    	color: $olivine;
-    	text-decoration: none;
-    	font-style: italic;
-    }
-}
-.fit-image{
-	@include bloco($width: 100%, $height: auto);
-    max-height: 310px;
+//Por que comida fitness
+.why-comida-fitness-pub-wrapper{
+    @include bloco(100%, 1200px, auto);
     box-sizing: border-box;
-    border: 30px solid transparent;
-    overflow: hidden;
-	>img{
-		@include img-fit(100%, 100%);
-	    border-radius: 10px;
-	}
+    border: 20px solid transparent;
+}
+.why-comida-pub{
+    @include bloco(100%, 100%, auto);
+    border-radius: 5px;
+    background-color: $darkgreymedium;
+    box-sizing: border-box;
+    border: 20px solid transparent;
+    transition: 200ms ease-in-out;
+    >h2{
+        @include texto(23px, $white, 'Roboto Bold', 26px, left);
+        padding-bottom: 15px;
+    }
+    >span{
+        @include texto(16px, $grey, 'Roboto Medium Italic', 24px, left);
+    }
+    &:hover{
+        background-color: $olivine;
+        cursor: pointer;
+    }
 }
 
 //Prato
@@ -1953,7 +1953,6 @@ a{
 .health-tricks-card{
     width: 100%;
     height: auto;
-    border-radius: 10px;
     background-color: $darkgreymedium;
     position: relative;
     margin-bottom: 30px;
