--- a/assets/scss/cms/stylesheet-cms.scss
+++ b/assets/scss/cms/stylesheet-cms.scss
@@ -1364,13 +1364,17 @@ input:-webkit-autofill {
     background-color: $mediumgrey;
     box-sizing: border-box;
     border: 20px solid transparent;
-
+    >h2{
+        @include texto(25px, $black, 'Roboto Bold', 32px, left);
+        padding-bottom: 15px;
+    }
     >div{
         @include bloco($width: 100%, $height: auto);
         background-color: $white;
         box-sizing: border-box;
         border: 12px solid transparent;
         border-radius: 5px;
+        margin-bottom: 20px;
         >h3{
             @include texto(18px, $darkgrey, 'Roboto Bold');
             padding-bottom: 20px;
