--- a/assets/scss/cms/stylesheet-cms-dark.scss
+++ b/assets/scss/cms/stylesheet-cms-dark.scss
@@ -1394,3 +1394,33 @@ input:-webkit-autofill {
         }
     }
 }
+
+//Slider
+.slider-wrapper{
+    width: 100%;
+    height: auto;
+    display: flex;
+}
+.slider-add-aside{
+    width: 100%;
+    max-width: 400px;
+    height: 100vh;
+    background-color: $darkgreymedium;
+}
+.slider-block{
+    width: 100%; height: auto; position: relative; transition: 200ms ease-in-out;
+    >img{
+        width: 100%; height: auto; display: block;
+    }
+    .slider-block-overflow{
+        width: 100%; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,.5); display: flex; flex-direction: row; justify-content: center; align-items: center; opacity: 0; transition: 200ms ease-in-out;
+    }
+    &:hover .slider-block-overflow{
+        opacity: 1;
+    }
+}
+
+.border-30px{
+    box-sizing: border-box;
+    border: 30px solid transparent;
+}
