--- a/assets/scss/style-light.scss
+++ b/assets/scss/style-light.scss
@@ -1914,7 +1914,7 @@ a{
         margin: 0;
         padding: 0;
         >img{
-            @include img-fit(1200px, 300px);
+            @include img-fit(100%, 300px);
         }
     }
     >h2{
