--- a/components/navbar.html
+++ b/components/navbar.html
@@ -38,7 +38,7 @@
 		<li><a href="todos-os-pratos.php">Pratos</a></li>
 		<li><a href="promocoes.php">Promoções</a></li>
 		<li><a href="fit-session.php">Fit Session</a></li>
-		<li><a href="publicacoes-gerais.php">Publicações Gerais</a></li>
+		<li><a href="comentarios-gerais.php">Comentários Gerais</a></li>
 		<li><a href="homenagem-parceiros.php">Homenagem a Parceiros</a></li>
 		<li><a href="sobre.php">Sobre Nós</a></li>
 		<li><a href="contato.php">Fale Conosco</a></li>
