--- a/assets/scss/bases-dark.scss
+++ b/assets/scss/bases-dark.scss
@@ -407,6 +407,7 @@ tr td:nth-child(4){
 	  	margin-top: 5px;
 	  	margin-bottom: 15px;
 	  	padding: 15px;
+        color: $white;
 	}
     .label-fix{
 	  	font-size: 18px;
