--- a/assets/scss/bases-light.scss
+++ b/assets/scss/bases-light.scss
@@ -187,6 +187,11 @@
 .generic-table{
     @include bloco(100%, 100%, auto);
     border-collapse: collapse;
+    >tr{
+        &:hover{
+            background-color: $mediumgrey;
+        }
+    }
 }
 .generic-table tr:first-child{
     background-color: $mediumgrey;
