--- a/assets/scss/style-dark.scss
+++ b/assets/scss/style-dark.scss
@@ -717,12 +717,18 @@ a{
     >div{
         @include bloco($width: 100%, $height: 100%);
         @include position(absolute, 0, 0, 0, 0);
-        @include display(flex, column, flex-end, center);
-        background: linear-gradient(180deg, transparent, rgba(0,0,0,0.8) 70%);
+        @include display(flex, column, flex-end, null);
+        background: linear-gradient(180deg, transparent, rgba(0,0,0,0.8) 100%);
+        >h2{
+            @include texto(21px, $white, 'Roboto Bold', 28px, left);
+            margin-left: 30px;
+            margin-bottom: 10px;
+        }
         >p{
-            @include texto(16px, $white, 'Roboto Light', 24px);
-            width: 90%;
-            margin: 0 auto 10px auto;
+            @include texto(16px, $white, 'Roboto Regular', 22px, left);
+            width: 80%;
+            margin-left: 30px;
+            margin-bottom: 30px;
         }
         >span{
             @include texto(21px, $black, 'Roboto Bold Italic', 24px, center);
@@ -742,46 +748,6 @@ a{
         padding-left: 50px;
         padding-bottom: 30px;
         width: 85%;
-    }
-}
-.publication-comments{
-    @include bloco(100%, 100%, auto);
-    @include display(flex, column, flex-start, flex-start);
-    box-sizing: border-box;
-    border: 15px solid transparent;
-    margin-bottom: -15px;
-    .comment-row{
-        @include bloco(100%, 100%, auto);
-        background: $white;
-        box-shadow: $shadow;
-        box-sizing: border-box;
-        border: 15px solid transparent;
-        border-radius: 5px;
-        margin-bottom: 15px;
-        >p{
-            @include texto(16px, $darkgrey, 'Roboto Regular', 24px, left);
-            width: 90%;
-            margin: 15px auto 15px 0px;
-        }
-    }
-    .comment-row>figure{
-        width: auto;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        >img{
-            @include img-fit(50px, 50x);
-            border-radius: 50%;
-        }
-        >span{
-            @include texto(18px, $black, 'Roboto Bold', 21px, left);
-            transition: 200ms ease-in-out;
-            margin-left: 15px;
-            &:hover{
-                color: $olivine;
-                cursor: pointer;
-            }
-        }
     }
 }
 //Login
