Login de usuário no site

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -73,7 +73,7 @@
 		</li>
 		<li><a href="termos-uso.php">Termos de Uso</a></li>
 		<li><a href="politicas-privacidade.php">Políticas de Privacidade</a></li>
-		<li><a href="">Logout</a></li>
+		<li><a href="modulo.php?logout">Logout</a></li>
 	</ul>
 	<div class="sidebar-separator"></div>
 	<div id="sidebar-right-close">
