--- a/assets/scss/bases-dark.scss
+++ b/assets/scss/bases-dark.scss
@@ -374,9 +374,9 @@ tr td:nth-child(4){
 	  	margin-top: 5px;
 		margin-bottom: 15px;
         transition: 200ms ease-in-out;
+        color: $white;
         &:focus{
             background-color: $olivine;
-            color: $white;
         }
         &:focus::-webkit-input-placeholder { color: $white; }
 	}
@@ -399,6 +399,11 @@ tr td:nth-child(4){
 	  	margin-top: 5px;
 	  	margin-bottom: 15px;
 	  	padding: 15px;
+        color: $white;
+        &:focus{
+            background-color: $olivine;
+        }
+        &:focus::-webkit-input-placeholder { color: $white; }
 	}
 	.file-generic{
 		width: 100%;
