--- a/assets/scss/sizes.scss
+++ b/assets/scss/sizes.scss
@@ -20,3 +20,7 @@ $tamanhos: (10px, 20px, 30px, 40px, 50px, 60px, 70px, 80px, 90px, 100px, 120px, 
 .height-100{
     height: 100%;
 }
+.big-text{
+    display: block;
+    text-overflow: ellipsis;
+}
