--- a/assets/scss/cms/stylesheet-cms-dark.scss
+++ b/assets/scss/cms/stylesheet-cms-dark.scss
@@ -883,6 +883,7 @@ img.btn-logout:hover {
         background-color: $darkgrey;
         border-radius: 5px;
         box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+        transition: 200ms ease-in-out;
         .title{
             @include texto(18px, $white, 'Roboto Bold');
             margin: 0;
@@ -893,6 +894,10 @@ img.btn-logout:hover {
         >p{
             @include texto(16px, $grey, 'Roboto Regular', 23px, left);
             width: 90%;
+        }
+        &:hover{
+            background: linear-gradient(45deg, $olivine, $gold);
+            cursor: pointer;
         }
     }
 }
